--- a/gradle.properties
+++ b/gradle.properties
@@ -42,9 +42,9 @@ mapping_version=2023.06.26-1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=perusdelight
+mod_id=peruviansdelight
 # The human-readable display name for the mod.
-mod_name=Peru's Delight
+mod_name=Peruvian's Delight
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Todos los derechos reservados :v
 # The mod version. See https://semver.org/
@@ -52,7 +52,7 @@ mod_version=0.0.1-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=net.giuliano.perusdelight
+mod_group_id=net.giuliano.peruviansdelight
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Giuliano, MathiMomos
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
